Feature Generation, Volatility

--- a/MergeData.ipynb
+++ b/MergeData.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -847,12 +847,13 @@
        "[532405 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "SPX_df.to_csv('Cleaned_SPX_Data.csv')\n",
     "SPX_df"
    ]
   },
@@ -1073,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1191,7 @@
        "4     10851      43062  -1  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,11 +1206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Time_Diff = 5\n",
     "# df1[f'Date Plus {Time_Diff} Mins'] = df1['Date'] + timedelta(seconds=60 * Time_Diff)\n",
     "# # df1[f'Date Plus {Time_Diff} Mins'] = df1[f'Date Plus {Time_Diff} Mins'].dt.strftime('%Y%m%d %H%M')\n",
     "# SPX_df.head()\n",
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
        "4      43062  -1  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
        "4      43062  -1  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
