--- a/Feature Generation, Volatility.ipynb
+++ b/Feature Generation, Volatility.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load in dataframes\n",
-    "spx_df = pd.read_csv(\"Cleaned_SPX_Data.csv\")\n",
-    "spx_df = spx_df.drop(columns=['Unnamed: 0'])\n",
+    "spx_df = pd.read_csv(\"FinalProject- SR/Resources/SPX_2004_2019.csv\")\n",
+    "spx_df.columns = [\"Date\", \"Open\", \"High\", \"Low\", \"Close\"]\n",
+    "spx_df.head()\n",
+    "# spx_df = spx_df.drop(columns=['Unnamed: 0'])\n",
     "\n",
     "tweet_df = pd.read_csv(\"mergedata_%change.csv\")\n",
     "tweet_df = tweet_df.drop(columns=['Unnamed: 0','Source'])\n",
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -64,56 +66,131 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
        "      <th>Close</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20170102 1801</td>\n",
-       "      <td>2243.00</td>\n",
+       "      <td>2004-09-06 09:32:00</td>\n",
+       "      <td>1114.75</td>\n",
+       "      <td>1114.75</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20170102 1802</td>\n",
-       "      <td>2243.25</td>\n",
+       "      <td>2004-09-06 09:33:00</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20170102 1803</td>\n",
-       "      <td>2243.00</td>\n",
+       "      <td>2004-09-06 09:34:00</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20170102 1804</td>\n",
-       "      <td>2243.75</td>\n",
+       "      <td>2004-09-06 09:35:00</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20170102 1805</td>\n",
-       "      <td>2243.75</td>\n",
+       "      <td>2004-09-06 09:36:00</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "      <td>1114.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512705</th>\n",
+       "      <td>2019-12-31 15:55:00</td>\n",
+       "      <td>3228.82</td>\n",
+       "      <td>3230.04</td>\n",
+       "      <td>3228.62</td>\n",
+       "      <td>3230.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512706</th>\n",
+       "      <td>2019-12-31 15:56:00</td>\n",
+       "      <td>3230.06</td>\n",
+       "      <td>3230.08</td>\n",
+       "      <td>3228.42</td>\n",
+       "      <td>3228.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512707</th>\n",
+       "      <td>2019-12-31 15:57:00</td>\n",
+       "      <td>3228.23</td>\n",
+       "      <td>3228.47</td>\n",
+       "      <td>3227.39</td>\n",
+       "      <td>3227.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512708</th>\n",
+       "      <td>2019-12-31 15:58:00</td>\n",
+       "      <td>3227.70</td>\n",
+       "      <td>3228.14</td>\n",
+       "      <td>3227.21</td>\n",
+       "      <td>3227.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512709</th>\n",
+       "      <td>2019-12-31 15:59:00</td>\n",
+       "      <td>3227.75</td>\n",
+       "      <td>3231.72</td>\n",
+       "      <td>3227.75</td>\n",
+       "      <td>3230.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1512710 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date    Close\n",
-       "0  20170102 1801  2243.00\n",
-       "1  20170102 1802  2243.25\n",
-       "2  20170102 1803  2243.00\n",
-       "3  20170102 1804  2243.75\n",
-       "4  20170102 1805  2243.75"
+       "                        Date     Open     High      Low    Close\n",
+       "0        2004-09-06 09:32:00  1114.75  1114.75  1114.65  1114.65\n",
+       "1        2004-09-06 09:33:00  1114.65  1114.65  1114.65  1114.65\n",
+       "2        2004-09-06 09:34:00  1114.65  1114.65  1114.65  1114.65\n",
+       "3        2004-09-06 09:35:00  1114.65  1114.65  1114.65  1114.65\n",
+       "4        2004-09-06 09:36:00  1114.65  1114.65  1114.65  1114.65\n",
+       "...                      ...      ...      ...      ...      ...\n",
+       "1512705  2019-12-31 15:55:00  3228.82  3230.04  3228.62  3230.04\n",
+       "1512706  2019-12-31 15:56:00  3230.06  3230.08  3228.42  3228.42\n",
+       "1512707  2019-12-31 15:57:00  3228.23  3228.47  3227.39  3227.62\n",
+       "1512708  2019-12-31 15:58:00  3227.70  3228.14  3227.21  3227.58\n",
+       "1512709  2019-12-31 15:59:00  3227.75  3231.72  3227.75  3230.56\n",
+       "\n",
+       "[1512710 rows x 5 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#SPX Full Data \n",
-    "spx_df.head()"
+    "spx_df"
    ]
   },
   {
@@ -261,13 +338,6 @@
     "tweet_df.head()\n",
     "# (datetime.strptime('20170103 1235', '%Y%m%d %H%M') + timedelta(seconds= 60)).strftime('%Y%m%d %H%M')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
