--- a/FinalProject- SR/DT Tweets.ipynb
+++ b/FinalProject- SR/DT Tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,249 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of tweets extracted: 200.\n",
+      "Number of tweets extracted: 1.\n",
       "\n",
       "5 recent tweets:\n",
       "\n",
-      "https://t.co/VfrOSwXoqU\n",
-      "\n",
-      "https://t.co/ZawRDjsldB\n",
-      "\n",
-      "https://t.co/wwjRRx4W0P\n",
-      "\n",
-      "Great businessman &amp; philanthropist Bernie Marcus, Co-Founder of Home Depot, said that Congress was too distracted b… https://t.co/TSBYm9No2h\n",
-      "\n",
-      "HAPPY EASTER!\n",
-      "\n",
-      "A very good sign is that empty hospital beds are becoming more and more prevalent. We deployed 418 Doctors, Nurses… https://t.co/yjCvNerv9H\n",
-      "\n",
-      "RT @realDonaldTrump: Wishing all a safe and blessed Easter Sunday. I will be tuning into Pastor @robertjeffress at https://t.co/roBC6bOARn…\n",
-      "\n",
-      "HAPPY EASTER! https://t.co/UX5Bhm82H2\n",
-      "\n",
-      "https://t.co/b3fwPSkSCF\n",
-      "\n",
-      "RT @SteveScalise: Let's be clear about what's going on:\n",
-      "\n",
-      "Republicans are trying to replenish the Paycheck Protection Program before funds r…\n",
-      "\n",
-      "RT @MarioDB: What a great story. \n",
-      "\n",
-      "@AmericanAir has turned the Admirals Club at @iflymia into a mask-making factory! During a time of crisi…\n",
-      "\n",
-      "RT @HouseGOP: The #PaycheckProtectionProgram is a lifeline for small businesses on Main Street across America.\n",
-      " \n",
-      "Congress must urgently pas…\n",
-      "\n",
-      "RT @senatemajldr: Small business layoffs spiked 1,000% last month. 10% of the U.S. workforce is now jobless. This is no time for political…\n",
-      "\n",
-      "RT @GOPLeader: The Paycheck Protection Program has been so successful for America’s small businesses that it is projected to run out of mon…\n",
-      "\n",
-      "Cryin’Chuck doesn’t have a clue. Couldn’t care less about the American Worker! https://t.co/eoXxXdn460\n",
-      "\n",
-      "RT @GOPLeader: Speaker Pelosi has said she is aware of 'no data as to why we need' more funding for Americans’ paychecks. Anyone paying att…\n",
-      "\n",
-      "RT @FLOTUS: On the eve of #Easter, let us remember the ones who lost their lives to COVID19. Please try to connect w/ family, friends &amp; lov…\n",
-      "\n",
-      "RT @FLOTUS: It is a great honor to serve the people of this incredible country. 🇺🇸 #InaugurationDay2017 https://t.co/4SEj2VBxXO\n",
-      "\n",
-      "Mail in ballots substantially increases the risk of crime and VOTER FRAUD!\n",
-      "\n",
-      "Will be interviewed by @JudgeJeanine tonight at 9:00 P.M. Eastern on @FoxNews! https://t.co/F83yVaxXab\n",
-      "\n",
-      "So now the Fake News @nytimes is tracing the CoronaVirus origins back to Europe, NOT China. This is a first! I wond… https://t.co/4WO2qkEN51\n",
-      "\n",
-      "Governor @GavinNewsom of California has been very nice &amp;  highly supportive about the great job we have done, worki… https://t.co/X1BE6wUjSC\n",
-      "\n",
-      "I will be watching. HAVE A GREAT EASTER! https://t.co/wCa7u6qSnl\n",
-      "\n",
-      "RT @robertjeffress: During our 152-year history in downtown Dallas Presidents Woodrow Wilson, Gerald Ford, &amp; George H. W. Bush have worship…\n",
-      "\n",
-      "RT @robertjeffress: Thank you, President @realDonaldTrump! We are honored to have you join us and are grateful for your strong leadership o…\n",
-      "\n",
-      "The Wall Street Journal Editorial Board doesn’t have a clue on how to fight and win. Their views on Tariffs &amp; Trade… https://t.co/S8NNL1OBpd\n",
-      "\n",
-      "Watching @FoxNews on weekend afternoons is a total waste of time. We now have some great alternatives, like @OANN.\n",
-      "\n",
-      "“The President and the Federal Government are doing an excellent job. When they say the death toll isn’t going to b… https://t.co/4lgwo8AQLc\n",
-      "\n",
-      "Great editorial by @SenRonJohnson! https://t.co/hGmcwI4OSe\n",
-      "\n",
-      "Wishing all a safe and blessed Easter Sunday. I will be tuning into Pastor @robertjeffress at… https://t.co/DhNE8PHIGk\n",
-      "\n",
-      "WE WILL BUILD IT AGAIN!\n",
-      "\n",
-      "....Does anyone ever notice how few quotes from an actual person are given nowadays by the Lamestream Media. Very s… https://t.co/2XV1LdLJLY\n",
-      "\n",
-      "When the Failing @nytimes or Amazon @washingtonpost writes a story saying “unnamed sources said”, or any such phras… https://t.co/1HAXGWhJMZ\n",
-      "\n",
-      "....economy was shuttered. This is unprecedented, it is unsettling and challenging but, we will rise to meet the oc… https://t.co/0nYuRdYfTy\n",
-      "\n",
-      "“I think the situation is unprecedented, and there is no question about that. It’s whiplash! The economy was moving… https://t.co/OeCrXErZkO\n",
-      "\n",
-      "“Trump did a deal with Japan. A lot of our product goes to Japan, and we are booming in North Dakota.” Jim on C Spa… https://t.co/U0th7LKMyz\n",
-      "\n",
-      "RT @WhiteHouse: In response to the virus, the American people have launched the greatest mobilization of our society since World War II. 🇺🇸…\n",
-      "\n",
-      "RT @WhiteHouse: This Sunday, millions of Christians will celebrate Easter. \n",
-      "\n",
-      "\"At this holy time, we pray that God will heal the sick and co…\n",
-      "\n",
-      "RT @WhiteHouse: The data is clear: Our collective national effort is saving many lives. Keep up the fight! https://t.co/MMk1BpwDpg\n",
-      "\n",
-      "RT @WhiteHouse: LIVE: Press Briefing with Coronavirus Task Force https://t.co/OtJWAa9yHo\n",
-      "\n",
-      "https://t.co/HGD0GHUOjt\n",
-      "\n",
-      "Nobody wants to say that if Elizabeth Warren gets out of the race before Super Tuesday, Crazy Bernie Sanders wins v… https://t.co/NRcJmZAXLG\n",
-      "\n",
-      "RT @trish_regan: AG #Barr says he believes #Russia investigation into #PresTrump was started without basis &amp; effectively amounted to an eff…\n",
-      "\n",
-      "RT @TomFitton: AG William Barr says Russia probe targeting @RealDonaldTrump was started 'without basis'. Where are the prosections? https:/…\n",
-      "\n",
-      "RT @brithume: Barr on the right track here. Most in the media went in the other direction.  https://t.co/Wyd20ZABgF\n",
-      "\n",
-      "The Invisible Enemy will soon be in full retreat!\n",
-      "\n",
-      "Because the T.V. Ratings for the White House News Conference’s are the highest, the Opposition Party (Lamestream Me… https://t.co/aDU9l8UQnu\n",
-      "\n",
-      "The White House Press Conference will take place today at 1:00 P.M., recognizing that it is Good Friday!\n",
-      "\n",
-      "HAPPY GOOD FRIDAY TO ALL!\n",
-      "\n",
-      "Wow, Approval Rating in the Republican Party - 96%. Thank you!\n",
-      "\n",
-      "RT @SenTomCotton: .@Max_Fisher claims—without evidence—that I believe the China virus was “produced by a Chinese weapons lab.” He should ha…\n",
-      "\n",
-      "RT @SenTomCotton: Very grateful for the people of Vietnam and their generosity during this time. Thank you!\n",
-      "\n",
-      "RT @SaraCarterDC: WHO Director Says Politicizing COVID19 Leads To 'body bags,' But He Was Accused Of Covering Up Epidemics In Ethiopia\n",
-      "\n",
-      " ht…\n",
-      "\n",
-      "RT @SaraCarterDC: Former Flynn Defense Counsel Covington and Burling 'just now found additional docs' In Flynn File - Sara A. Carter\n",
-      "\n",
-      "“We a…\n",
-      "\n",
-      "Not good Gregg, but it is what it is. Have to save the airlines! https://t.co/AeaiLCO9pg\n",
-      "\n",
-      "RT @GreggJarrett: Coronavirus Crisis – Americans Fear the Lockdown More Than The Virus https://t.co/hVDzBPypAQ\n",
-      "\n",
-      "RT @Sedona4ProLife: @realDailyWire Can't beat Trump! https://t.co/uEQ1hmCj1a\n",
-      "\n",
-      "RT @THE_REDLILY: @EM_KA_17 @senatemajldr THEY ARE EVIL PEOPLE PERIOD‼️ https://t.co/Nr4TSxcPSp\n",
-      "\n",
-      "RT @zeusFanHouse: #Trump #Coronavirus Campaign Ad Features Joe Biden Cheerleading for China\n",
-      "\n",
-      "“During America’s #crisis,Biden protected #Chi…\n",
-      "\n",
-      "RT @Thaun84: @realDailyWire If Trump is tied with Biden, it probably actually means he is 10 points ahead.\n",
-      "\n",
-      "RT @realDailyWire: Fauci: We’re On Track For More ‘Normal’ Summer; Mnuchin: Likely To Begin ‘Reopening’ In May https://t.co/uGVesET2cr http…\n",
-      "\n",
-      "RT @cybergenica: AG William Barr on the Russia investigation: 'There's something far more troubling here' https://t.co/l9pwO7PCYZ #FoxNews…\n",
-      "\n",
-      "RT @cybergenica: Trump vows coronavirus-ravaged economy will 'bounce' back https://t.co/6r0LJknEY5 #FoxNews #CNN #MSNBC\n",
-      "\n",
-      "RT @cybergenica: Macron faces calls to allow wider use hydroxychloroquine in coronavirus fight: report https://t.co/APZk7159k0 #FoxNews #CN…\n",
-      "\n",
-      "Congress must go back to DEDUCTIBILITY by businesses if Restaurants, Clubs &amp; Entertaiment is expected to flourish (like never before)!\n",
-      "\n",
-      "Democrats are blocking a 251 Billion Dollar funding boost for Small Businesses which will help them keep their empl… https://t.co/ashxJ7mPAU\n",
-      "\n",
-      "This week, in only 4 days, we had the biggest Stock Market increase since 1974. We have a great chance for the real… https://t.co/czvHUd1jux\n",
-      "\n",
-      "RT @KimStrassel: The World Health Organization’s bows to China have harmed the global response to the coronavirus.  https://t.co/uC0kgXFCK9…\n",
-      "\n",
-      "RT @KimStrassel: Bernie Sanders gives up on the nomination but is determined to force Joe Biden leftward—making him unelectable in the proc…\n",
-      "\n",
-      "RT @KimStrassel: Pelosi holds up small business: Democrats may let a new relief program run out of money.  https://t.co/2nihHg8DQw via @WSJ\n",
-      "\n",
-      "RT @BBCBreaking: Prime Minister Boris Johnson has been moved out of intensive care but remains in hospital, Downing Street says https://t.c…\n",
-      "\n",
-      "RT @searcyroger52: @IngrahamAngle if you continue to have loud mouth low IQ Chris Hahn on your show you’re going to loose me and many other…\n",
-      "\n",
-      "RT @TommyHicksGOP: “President Trump’s campaign remains at the forefront of digital campaigning and engagement…Sleepy Joe’s broadcasts, whic…\n",
-      "\n",
-      "RT @TeamTrump: MUST READ op-ed from @LizRNC: Isn’t it strange how every Democrat proposal for voting during a pandemic is exactly what Demo…\n",
-      "\n",
-      "RT @CLH45: \"Our goal is - first, second and third - to get relief to people who need it, quickly. So, we're trying to do it as swiftly as p…\n",
-      "\n",
-      "RT @TeamTrump: Secretary of State @mikepompeo announces that the State Department has repatriated 50,000 Americans! https://t.co/iWHLL2pHHd\n",
-      "\n",
-      "RT @parscale: The @TeamTrump online campaign is 🔥🔥🔥!\n",
-      "\n",
-      "Since going all-virtual March 13:\n",
-      "\n",
-      "❗️276K NEW volunteers\n",
-      "❗️13,347,694 volunteer calls…\n",
-      "\n",
-      "RT @GaryCoby: Trump vs Establishment - Part 2!\n",
-      "\n",
-      "#SleepyJoe Loves...\n",
-      "✅ China\n",
-      "✅ Open Borders\n",
-      "✅ Free Healthcare for Illegals\n",
-      "✅ Big Government…\n",
-      "\n",
-      "RT @FrancisBrennan: “Trump Campaign: The President Will Destroy Biden in November” https://t.co/wOLQ1roYzk\n",
-      "\n",
-      "RT @FrancisBrennan: What is Joe Biden doing with his hand here?\n",
-      "\n",
-      "It looks like Biden’s teleprompter went down during his coronavirus press…\n",
-      "\n",
-      "RT @LizRNC: AG Barr on Durham probe:\n",
-      "\n",
-      "\"He is looking to bring to justice people who were engaged in abuses if he can show that they were cr…\n",
-      "\n",
-      "RT @ErinMPerrine: Dem establishment got the candidate they wanted with Biden &amp; his policies are right in line w/ Socialist Bernie -- BAD FO…\n",
-      "\n",
-      "RT @TeamTrump: Team Trump Communications Director @TimMurtaugh on how important the #PaycheckProtectionProgram is for American Small Busine…\n",
-      "\n",
-      "RT @FLOTUS: As the CDC continues to study the spread of the COVID-19, they recommend people wear cloth face coverings in public settings wh…\n",
-      "\n",
-      "RT @CNBCnow: BREAKING: Democrats block McConnell’s effort to get unanimous support for $250 billion in additional small business aid \n",
-      "https…\n",
-      "\n",
-      "RT @AndrewHClark: Slow slow Sleepy Joe https://t.co/Fuoki6vGYO\n",
-      "\n",
-      "Tim Scott is Great! https://t.co/O1Aivbc2yG\n",
-      "\n",
-      "Thank you Frank. It’s ABC Fake News. They knew they were wrong when they went with this Hoax of a story! https://t.co/FHkRaW3BTi\n",
-      "\n",
-      "RT @JuddPDeere45: .@realDonaldTrump and @senatemajldr are fighting to help small businesses across this country. #COVID19 #AmericaWorksToge…\n",
-      "\n",
-      "RT @MZanona: House Minority Leader Kevin McCarthy said it's “disgusting” that Dems are pushing to include money for mail-in voting in the n…\n",
-      "\n",
-      "RT @Surabees: Just like @CNN did earlier today, here's @nytimes once again changing a headline to protect their close personal friends in t…\n",
-      "\n",
-      "RT @ErinMPerrine: 100% mail in voting is ripe for fraud. States should maintain the responsibility for their voting laws.\n",
-      "\n",
-      "Democrats want t…\n",
-      "\n",
-      "RT @FLOTUS: Today I joined @POTUS, @VP, &amp; @SecondLady on a call w Mental Health Professionals. Americans are enduring many hardships becaus…\n",
-      "\n",
-      "RT @BenGoldey: President @realDonaldTrump just announced: “Student loan payments have been waived for 6 months, and we'll discuss it after…\n",
-      "\n",
-      "RT @GOPconvention: “The Republican Convention is going to be such a benefit for the city. It’s going to show everyone around the world that…\n",
-      "\n",
-      "Thank you Erin! https://t.co/m8HRlK6VCY\n",
-      "\n",
-      "RT @Jim_Jordan: Chuck Schumer will never pass up an opportunity to play partisan games.\n",
-      "https://t.co/SrMlN4MR7X\n",
-      "\n",
-      "RT @realDonaldTrump: The Wall Street Journal always “forgets” to mention that the ratings for the White House Press Briefings are “through…\n",
-      "\n",
-      "RT @realDonaldTrump: Great News: Prime Minister Boris Johnson has just been moved out of Intensive Care. Get well Boris!!!\n",
-      "\n",
-      "RT @realDonaldTrump: On National Former Prisoner of War Recognition Day, we honor the more than 500,000 American warriors captured while pr…\n",
+      "RT @WhiteHouse: LIVE: Press Briefing with Coronavirus Task Force https://t.co/2cfwNTvpNX\n",
       "\n"
      ]
     }
@@ -304,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -334,43 +103,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Great businessman &amp;amp; philanthropist Bernie ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>HAPPY EASTER!</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A very good sign is that empty hospital beds a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RT @realDonaldTrump: Wishing all a safe and bl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HAPPY EASTER! https://t.co/UX5Bhm82H2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>https://t.co/b3fwPSkSCF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>RT @SteveScalise: Let's be clear about what's ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>RT @MarioDB: What a great story. \\n\\n@American...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>RT @HouseGOP: The #PaycheckProtectionProgram i...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>RT @senatemajldr: Small business layoffs spike...</td>\n",
+       "      <td>RT @WhiteHouse: LIVE: Press Briefing with Coro...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -378,16 +111,7 @@
       ],
       "text/plain": [
        "                                              Tweets\n",
-       "0  Great businessman &amp; philanthropist Bernie ...\n",
-       "1                                      HAPPY EASTER!\n",
-       "2  A very good sign is that empty hospital beds a...\n",
-       "3  RT @realDonaldTrump: Wishing all a safe and bl...\n",
-       "4              HAPPY EASTER! https://t.co/UX5Bhm82H2\n",
-       "5                            https://t.co/b3fwPSkSCF\n",
-       "6  RT @SteveScalise: Let's be clear about what's ...\n",
-       "7  RT @MarioDB: What a great story. \\n\\n@American...\n",
-       "8  RT @HouseGOP: The #PaycheckProtectionProgram i...\n",
-       "9  RT @senatemajldr: Small business layoffs spike..."
+       "0  RT @WhiteHouse: LIVE: Press Briefing with Coro..."
       ]
      },
      "metadata": {},
@@ -789,21 +513,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-4939cc46af3b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'SA'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0manalize_sentiment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtweet\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mtweet\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Tweets'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data['SA'] = np.array([ analize_sentiment(tweet) for tweet in data['Tweets'] ])"
    ]
